--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ flask-login>=0.6.2
 flask-restful>=0.3.9
 
 # Additional utilities
-gunicorn==20.1.0
+gunicorn app:app
 Werkzeug>=2.0.1
 argparse>=1.4.0
 aiohttp>=3.8.4
